--- a/style.css
+++ b/style.css
@@ -1,55 +1,133 @@
-index, body {
-  height : 100%;
-  margin : 0;
+
+*,
+*::before,
+*::after { 
+  box-sizing: border-box;
+}
+
+html {
+    background-color: #D8CACA;
 }
 
 body {
-  background : #A1C4D4;
-  display : flex; 
-  flex-direction : column;
-  justify-content : center;
-  align-items : center;
+  font-family: 'Lato','Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0;
+  padding: 1rem;
+
 }
 
-.container {
-  width : 300px;
-  height : 200px;
-  position : relative;  
-  perspective : 800px;
-  border-radius : 4px;
+img {
+  max-width:400px;
+  max-height:250px;
+  vertical-align: middle;
+
+}
+
+.btn {
+  background-color: #A09999;
+  border: 1px solid #636060;
+  border-radius: 5px;
+  color: #000300;
+  padding: 0.5rem;
+  text-transform: lowercase;
+}
+
+/*hover and active*/
+.btn:hover {
+    background-color: #968C8C;
+}
+
+.btn:active {
+    background-color: #968C8C;
+}
+
+.btn--block {
+  display: block;
+  width: 100%;
+}
+ 
+.cards {
+  display: inline-flex;
+  background-color: #928989;
+  border-radius: 5px;
+  flex-wrap: wrap;
+  flex-direction: row;
+  list-style: none;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+@media screen and (min-width: 550px) {
+    .cards__item {
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .cards__item {
+        width: 33.33%;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .cards__item {
+        width: 25%;
+    }
+}
+
+.cards__item {
+  display: flex;
+  padding: 1rem;
 }
 
 .card {
-  width : 100%;
-  height : 100%;
-  position :absolute;
-  transform-style : preserve-3d;
-  transition : transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  border-radius : 6px;
-  box-shadow : 0 6px 16px rgba(0,0,0,0.15);
-  cursor : pointer;
+  background-color: rgba(58, 54, 54, 0.43);
+  border-radius: 0.25rem;
+  box-shadow: 0 20px 40px -14px rgba(0,0,0,0.25);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
-  
 
-  div {
-    position : absolute;
-    width : 100%;
-    height : 100%;
-    backface-visibility : hidden;
-    border-radius : 6px;
-    background : #fff;
-    display : flex;
-    justify-content : center;
-    align-items : center;
-    font : 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-    -webkit-font-smoothing : antialiased;
-    color : #47525D;
-  }
+.card__content {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  padding: 1rem;
+}
 
-  .back {
-    transform : rotateY(180deg);
+/*.card__image {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+    filter: contrast(70%);
+    overflow: hidden;
+    position: relative;
+    transition: filter 0.5s cubic-bezier(.43,.41,.22,.91);;
+    display: block;
+    max-width:230px;
+    max-height:95px;
   }
+*/
 
-  &.flipped {
-    transform : rotateY(180deg);
-  }
+.card__title {
+  color: #0F0D0D;
+  font-size: 1.25rem;
+  font-weight: 300;
+  padding-top: 10;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.card__text {
+  color: #000300;
+  flex: 1 1 auto;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  margin-bottom: 1.25rem;
+}
