--- a/style.css
+++ b/style.css
@@ -10,11 +10,10 @@ html {
 }
 
 body {
-  font-family: 'Lato','Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Anton', Helvetica, Arial, sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 200;
   letter-spacing: 0;
-  padding: 1rem;
 
 }
 
@@ -22,7 +21,6 @@ img {
   max-width:400px;
   max-height:250px;
   vertical-align: middle;
-
 }
 
 .btn {
@@ -31,7 +29,6 @@ img {
   border-radius: 5px;
   color: #000300;
   padding: 0.5rem;
-  text-transform: lowercase;
 }
 
 /*hover and active*/
@@ -99,35 +96,21 @@ img {
   padding: 1rem;
 }
 
-/*.card__image {
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-top-left-radius: 0.25rem;
-    border-top-right-radius: 0.25rem;
-    filter: contrast(70%);
-    overflow: hidden;
-    position: relative;
-    transition: filter 0.5s cubic-bezier(.43,.41,.22,.91);;
-    display: block;
-    max-width:230px;
-    max-height:95px;
-  }
-*/
 
 .card__title {
-  color: #0F0D0D;
-  font-size: 1.25rem;
-  font-weight: 300;
-  padding-top: 10;
-  letter-spacing: 2px;
-  text-transform: uppercase;
+  color: #221F1F;
+  font-size: 1.55rem;
+  font-weight: 600;
+  padding-top: 12px;
+  letter-spacing: .5px;
 }
 
 .card__text {
   color: #000300;
   flex: 1 1 auto;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 0.875rem;
+  font-weight: 300;
   line-height: 1.5;
   margin-bottom: 1.25rem;
 }
