--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ img {
 
 
 .card__title {
-  color: #181616;
+  color: #201E1E;
   font-size: 1.55rem;
   font-weight: 500;
   padding-top: 12px;
@@ -108,7 +108,7 @@ img {
 .card__text {
   color: #000300;
   flex: 1 1 auto;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Ubuntu',Arial, Helvetica, sans-serif;
   font-size: 0.875rem;
   font-weight: 300;
   line-height: 1.5;
